log
vie., 21 de abr. de 2023  2:35:29: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
9031142
vie., 21 de abr. de 2023  2:42:00: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|6
total_score: 15/70
265c305
vie., 21 de abr. de 2023  2:51:35: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:20: error: 'return' with a value, in function returning void [-Werror]
             return NULL;
                    ^~~~
treemap.c:48:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b729210
vie., 21 de abr. de 2023  2:52:01: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
f262b71
vie., 21 de abr. de 2023  2:55:37: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
f108bb1
vie., 21 de abr. de 2023  3:08:53: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
 tests:  0|0
8584427
vie., 21 de abr. de 2023  3:14:07: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
15f7158
vie., 21 de abr. de 2023  3:33:48: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
15a6e79
vie., 21 de abr. de 2023  3:41:15: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
5e31277
vie., 21 de abr. de 2023  3:42:12: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
693a404
